--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Say</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Simon Says Game</h1>
@@ -14,5 +15,6 @@
         <div class="btn">3</div>
         <div class="btn">4</div>
     </div>
+    <script src = "app.js"></script>
 </body>
 </html>
